syntax = "proto3";

package pkg.meta;

import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";

option go_package = "edu/pkg/meta;meta";
option java_multiple_files = true;
option java_package = "edu.pkg.meta";

message DataPermission {
    string dataScope = 1;
	uint64 userId = 2;
	uint64 roleId = 3;
    string roleKey = 4;
}
